Fri Aug 22 20:08:21 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * tests/DCPS/LargeSample/Writer.cpp:

          Don't sleep between sends.

        * tests/DCPS/LargeSample/multicast.ini:

          Double nak_depth.

        * tests/DCPS/LargeSample/subscriber.cpp:

          Reworking logging.

Fri Aug 22 16:11:35 UTC 2014  Byron Harris  <harrisb@ociweb.com>

        * tests/DCPS/MultiRepoTest/TestConfig.h:
        * tests/DCPS/MultiRepoTest/TestMonitor.cpp:

          Avoid conversions from unsigned to signed type causing
          Visual Studio compiler to emit numerous warnings.

Fri Aug 22 01:57:53 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * dds/DCPS/DataSampleElement.inl:

          Fix FUZZ

Thu Aug 21 22:52:12 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * tests/DCPS/DCPSInfoRepo/DCPSDataReaderI.cpp:
        * tests/transport/error_handling/SimpleTransportClient.h:

          Fix references to GUID_UNKNOWN.

Thu Aug 21 20:01:08 UTC 2014  Byron Harris  <harrisb@ociweb.com>

        * dds/DCPS/DataSampleElement.inl:
        * dds/DCPS/DataSampleHeader.inl:
        * dds/DCPS/RTPS/Spdp.h:
        * dds/InfoRepo/PersistenceUpdater.cpp:
        * performance-tests/Bench/src/Publication.cpp:
        * performance-tests/Bench/src/StatisticalValue.h:
        * performance-tests/Bench/src/StatisticalValue.cpp:
        * performance-tests/Bench/src/Subscription.cpp:
        * performance-tests/DCPS/Priority/PublicationProfile.cpp:
        * tests/DCPS/ConfigTransports/DataReaderListener.cpp:
        * tests/DCPS/DCPSInfoRepo/DCPSDataReaderI.cpp:
        * tests/DCPS/FooType/Foo_Singleton_Transport.cpp:
        * tests/DCPS/Reconnect/DataWriterListener.cpp:
        * tests/transport/error_handling/SimpleTransportClient.h:
        * tests/transport/rtps/publisher.cpp:
        * tests/transport/rtps_reliability/rtps_reliability.cpp:

          Address missing initialization of class members reported by Coverity.

Local Variables: