@@ -110,7 +110,13 @@ int
 Publication::associations() const
 {
   DDS::PublicationMatchedStatus publicationMatches = { 0, 0, 0, 0, 0};
-  this->writer_->get_publication_matched_status(publicationMatches);
+  if (this->writer_->get_publication_matched_status(publicationMatches) != DDS::RETCODE_OK) {
+	  ACE_ERROR((LM_ERROR,
+	             ACE_TEXT("(%P|%t) ERROR: ")
+	             ACE_TEXT("Test::Publication::associations, ")
+	             ACE_TEXT("Could not get publication matched status.\n")));
+
+  }
   return publicationMatches.current_count;
 }
 
