@@ -1,3 +1,12 @@
+Mon Aug 25 12:38:56 UTC 2014  Byron Harris  <harrisb@ociweb.com>
+
+        * dds/InfoRepo/FederatorManagerImpl_updates.cpp:
+        * performance-tests/Bench/src/Publication.cpp:
+        * performance-tests/Bench/src/Subscription.cpp:
+
+          Address failure to check return status codes as reported
+          by Coverity.
+
 Fri Aug 22 20:08:21 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>
 
         * tests/DCPS/LargeSample/Writer.cpp:
